Fix reason table size being too big

--- a/static/entry.css
+++ b/static/entry.css
@@ -34,6 +34,10 @@
   text-align: center;
 }
 
+.file-reason {
+  max-width: 350px;
+}
+
 .entry-info {
   display: flex;
   flex-direction: row;
